--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-    <title>Random colour</title>
+    <title>Random Color Generator</title>
     <meta name="author" content="Tie (david@tie208.com)">
     <meta property="og:title" content="Random Color" />
     <meta property="og:description" content="Random Color Generator" />
