--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 	    var k = new Konamiz().onStart(function() {document.bgColor = "#6600CC";});
 	</script>
   </head>
-  <body>
+  <body align+"center">
+	  <button onClick="window.location.href=window.location.href">Refresh Page</button>
     <script type="text/javascript">
       var bg_colour = Math.floor(Math.random() * 16777215).toString(16);
       bg_colour = "#" + ("000000" + bg_colour).slice(-6);
