--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</script>
   </head>
   <body align+"center">
-	  <button onClick="window.location.href=window.location.href">Refresh Page</button>
+	  <button onClick="window.location.href=window.location.href">New Color?</button>
     <script type="text/javascript">
       var bg_colour = Math.floor(Math.random() * 16777215).toString(16);
       bg_colour = "#" + ("000000" + bg_colour).slice(-6);
