--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
   </head>
   <body align+"center">
 	  <button onClick="window.location.href=window.location.href">New Color?</button>
+	  <style>
+.button {
+  background-color: #ffffff;
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+</style>
     <script type="text/javascript">
       var bg_colour = Math.floor(Math.random() * 16777215).toString(16);
       bg_colour = "#" + ("000000" + bg_colour).slice(-6);
