--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</script>
   </head>
   <body align+"center">
-	  <button onClick="window.location.href=window.location.href">New Color?</button>
+	  <button class="button" onClick="window.location.href=window.location.href">New Color?</button>
 	  <style>
 .button {
   background-color: #ffffff;
