--- a/index.html
+++ b/index.html
@@ -16,14 +16,18 @@
 	  <button class="button" onClick="window.location.href=window.location.href">New Color?</button>
 	  <style>
 .button {
-  background-color: #ffffff;
-  border: none;
-  color: black;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
+  display:inline-block;
+ padding:0.5em 3em;
+ border:0.16em solid #FFFFFF;
+ margin:0 0.3em 0.3em 0;
+ box-sizing: border-box;
+ text-decoration:none;
+ text-transform:uppercase;
+ font-family:'Roboto',sans-serif;
+ font-weight:400;
+ color:#FFFFFF;
+ text-align:center;
+ transition: all 0.15s;
 }
 </style>
     <script type="text/javascript">
