--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <body align+"center">
 	  <button class="button" onClick="window.location.href=window.location.href">New Color?</button>
 	  <style>
-.button {
-  display:inline-block;
+a.button{
+ display:inline-block;
  padding:0.5em 3em;
  border:0.16em solid #FFFFFF;
  margin:0 0.3em 0.3em 0;
@@ -29,6 +29,22 @@
  text-align:center;
  transition: all 0.15s;
 }
+a.button:hover{
+ color:#DDDDDD;
+ border-color:#DDDDDD;
+}
+a.button:active{
+ color:#BBBBBB;
+ border-color:#BBBBBB;
+}
+@media all and (max-width:30em){
+ a.button2{
+  display:block;
+  margin:0.4em auto;
+ }
+}
+  
+
 </style>
     <script type="text/javascript">
       var bg_colour = Math.floor(Math.random() * 16777215).toString(16);
