--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	    var k = new Konamiz().onStart(function() {document.bgColor = "#6600CC";});
 	</script>
   </head>
-  <body align+"center">
+  <body align="center">
 	  <button class="button" onClick="window.location.href=window.location.href">New Color?</button>
 	  <style>
 .button {
